# ShapeAnalyzer

./: CMakeLists.txt  Doxyfile  README.md  ShapeAnalyzer.cxx  ShapeAnalyzer.ui  ShapeAnalyzer1.ui1
src/: CMakeLists.txt  Correspondence.cxx  Correspondence.h  CorrespondenceData.h  CorrespondenceListItem.cxx  CorrespondenceListItem.h  CorrespondencePicker.cxx  CorrespondencePicker.h  CorrespondenceSet.cxx  CorrespondenceSet.h  FaceCorrespondence.cxx  FaceCorrespondence.h  FaceCorrespondenceData.h  FaceCorrespondencePicker.cxx  FaceCorrespondencePicker.h  PointCorrespondence.cxx  PointCorrespondence.h  PointCorrespondenceData.h  PointCorrespondencePicker.cxx  PointCorrespondencePicker.h  SceneReader.cpp  SceneReader.h  Set.h  Shape.cxx  Shape.h  ShapeAnalyzer.cxx  ShapeAnalyzer.h  ShapeAnalyzer.ui  ShapeAnalyzerDriver.cxx  ShapeAttribute.h  ShapeAttributeList.h  ShapeListItem.cxx  ShapeListItem.h  correspondences.ui  help.ui  settings.ui  vtkGeodesic.cxx  vtkGeodesic.h  vtkOFFReader.cxx  vtkOFFReader.h  (+3 more)
src/attributes/: CorrespondenceAttribute.h  FaceAttribute.h  PointAttribute.h  ShapeAttribute.h
src/cmake-modules/: FindPETSc.cmake  FindSLEPc.cmake
src/coloring/: MetricColoring.cpp  MetricColoring.h  ShapeFaceColoring.h  ShapePointColoring.h
src/custom/: CustomClassesRegistry.h  Factory.h  RegisterCustomClasses.h
src/custom/contextMenuItems/: ColorEigenfunctionContextMenuItem.cpp  ColorEigenfunctionContextMenuItem.h  ColorEigenfunctionCustomMenuItem.cpp  ColorEigenfunctionCustomMenuItem.h  ColorMetricContextMenuItem.h  ColorMetricCustomMenuItem.h  ColorSignatureContextMenuItem.h  ColorSignatureCustomMenuItem.h  CustomContextMenuItem.h  EigenfunctionCustomMenuItem.cpp  EigenfunctionCustomMenuItem.h  ExtractPointSegmentContextMenuItem.cpp  ExtractPointSegmentContextMenuItem.h  ExtractSegmentContextMenuItem.cpp  ExtractSegmentContextMenuItem.h  ExtractSegmentCustomMenuItem.cpp  ExtractSegmentCustomMenuItem.h  HeatDiffusionContextMenuItem.cpp  HeatDiffusionContextMenuItem.h  HeatDiffusionCustomMenuItem.cpp  HeatDiffusionCustomMenuItem.h  SegmentIndicatorContextMenuItem.cpp  SegmentIndicatorContextMenuItem.h  ShapeInfoContextMenuItem.cpp  ShapeInfoContextMenuItem.h  ShapeInfoDialog.ui  VoronoiCellsContextMenuItem.h  VoronoiCellsCustomMenuItem.h
src/custom/tabs/: CorrespondenceColoring.cpp  CorrespondenceColoring.h  CorrespondenceColoringTab.cpp  CorrespondenceColoringTab.h  CorrespondenceColoringTabWidget.ui  CustomTab.h  FunctionTransferTab.cpp  FunctionTransferTab.h  FunctionTransferTabWidget.ui  IdentityMatchingTab.cpp  IdentityMatchingTab.h  IdentityMatchingTabWidget.ui  MeshCheckTab.cpp  MeshCheckTab.h  MeshCheckTabWidget.ui  ShapeInterpolationCustomTab.cpp  ShapeInterpolationCustomTab.h  ShapeInterpolationTab.cpp  ShapeInterpolationTab.h  ShapeInterpolationTabWidget.ui  meshcheck.ui  qtCorrespondenceColoringTab.cpp  qtCorrespondenceColoringTab.h  qtMeshCheckTab.cpp  qtMeshCheckTab.h  qtShapeInfoTab.cpp  qtShapeInfoTab.h  qtShapeInterpolationTab.cpp  qtShapeInterpolationTab.h  qtShapesTab.h  shapeInfo.ui  shapeInterpolation.ui
src/domain/: FEMLaplaceBeltramiOperator.cpp  FEMLaplaceBeltramiOperator.h  Factory.h  FunctionalMaps.cpp  FunctionalMaps.h  HashMap.h  HeatDiffusion.cpp  HeatDiffusion.h  LaplaceBeltramiOperator.cpp  LaplaceBeltramiOperator.h  MeshChecker.cpp  MeshChecker.h  PetscFunctionalMaps.cpp  PetscFunctionalMaps.h  PetscHeatDiffusion.cpp  PetscHeatDiffusion.h  PetscHelper.cpp  PetscHelper.h  Set.h  Shape.cpp  Shape.h  VolumetricShape.cpp  VolumetricShape.h
src/domain/attributes/: ComplexFaceAttribute.h  ComplexPointAttribute.h  CorrespondenceAttribute.h  Descriptor.h  DiscreteFaceAttribute.cpp  DiscreteFaceAttribute.h  DiscretePointAttribute.cpp  DiscretePointAttribute.h  FaceAttribute.h  PointAttribute.h  ScalarFaceAttribute.cpp  ScalarFaceAttribute.h  ScalarPointAttribute.cpp  ScalarPointAttribute.h  ShapeAttribute.h
src/domain/coloring/: Coloring.h  CoordinateColoring.cpp  CoordinateColoring.h  CorrespondenceColoring.cpp  CorrespondenceColoring.h  DiscreteFaceColoring.cpp  DiscreteFaceColoring.h  DiscretePointColoring.cpp  DiscretePointColoring.h  FaceColoring.h  FaceCoordinateColoring.h  MetricColoring.h  PointColoring.cpp  PointColoring.h  ScalarFaceColoring.cpp  ScalarFaceColoring.h  ScalarPointColoring.cpp  ScalarPointColoring.h
src/domain/correspondences/: Correspondence.cpp  Correspondence.h  CorrespondenceData.h  FaceCorrespondence.cpp  FaceCorrespondence.h  FaceCorrespondenceData.h  PointCorrespondence.cpp  PointCorrespondence.h  PointCorrespondenceData.h  VisualCorrespondence.h
src/domain/io/: SceneReader.cpp  SceneReader.h  SceneWriterReader.cpp  (+12 more)
src/geodesics/: geodesic_algorithm_base.h  geodesic_algorithm_dijkstra_alternative.h  geodesic_algorithm_exact.h  geodesic_algorithm_graph_base.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h  geodesic_mesh.h
src/io/: IOError.h  SceneWriterReader.cpp  SceneWriterReader.h  vtkOBJWriter.cpp  vtkOBJWriter.h  vtkOFFReader.cpp  vtkOFFReader.h  vtkOFFWriter.cpp  vtkOFFWriter.h  vtkToscaReader.cpp  vtkToscaReader.h  vtkToscaWriter.cpp  vtkToscaWriter.h
src/metrics/: Euclidean.cpp  Euclidean.h  Geodesic.cpp  Geodesic.h  Metric.h  MetricFactory.h
src/qt/: qtCorrespondenceWindow.cpp  qtCorrespondenceWindow.h  qtShapeInfoTab.cxx  qtShapeInfoTab.h
src/samplings/: FPS.cpp  FPS.h  ShapeSampling.h
src/util/: Error.h  ErrorObserver.h  HashMap.h
src/view/: CorrespondencePicker.cpp  CorrespondencePicker.h  CustomListWidgetItem.h  ErrorObserver.cpp  ErrorObserver.h  FaceCorrespondencePicker.cpp  FaceCorrespondencePicker.h  HelpDialog.ui  ImportShapeDialog.ui  PointCorrespondencePicker.cpp  PointCorrespondencePicker.h  SaveScreenshotDialog.ui  ShapeAnalyzer.cpp  ShapeAnalyzer.h  ShapeAnalyzer.ui  ShapeAnalyzerDriver.cpp  ShapeAnalyzerInteractorStyle.cpp  ShapeAnalyzerInteractorStyle.h  ShapeAnalyzerInterface.h  correspondenceColoring.ui  correspondences.ui  faceCorrespondences.ui  help.ui  meshcheck.ui  openshape.ui  pointCorrespondences.ui  saveScreenshot.ui  shapeInterpolation.ui
(+710 files in other folders)
